--- a/docs/cpp/m128i.md
+++ b/docs/cpp/m128i.md
@@ -1,5 +1,5 @@
 ---
-title: __m128i | Documenti Microsoft
+title: __m128i | Microsoft Docs
 ms.custom: 
 ms.date: 11/04/2016
 ms.reviewer: 
@@ -16,15 +16,15 @@ author: mikeblome
 ms.author: mblome
 manager: ghogen
 ms.workload: cplusplus
-ms.openlocfilehash: 6ef452509065c2e1052460f5e7a6e3f340c94507
-ms.sourcegitcommit: 8fa8fdf0fbb4f57950f1e8f4f9b81b4d39ec7d7a
+ms.openlocfilehash: 525f04b48f1c507180043238909c1c41d0839b0a
+ms.sourcegitcommit: 9a0a287d6940591523af959ebdac5affa36220da
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 01/25/2018
 ---
 # <a name="m128i"></a>__m128i
 ## <a name="microsoft-specific"></a>Sezione specifica Microsoft  
- Il tipo di dati `__m128i` da utilizzare con gli intrinseci delle istruzioni di Streaming SIMD Extensions 2 (SSE2), è definito in emmintrin.h.  
+ Il `__m128i` il tipo di dati, per l'utilizzo con gli intrinseci delle istruzioni Streaming SIMD Extensions 2 (SSE2), è definito in \<emmintrin >.  
   
 ```  
 // data_types__m128i.cpp  
