--- a/docs/cpp/w64.md
+++ b/docs/cpp/w64.md
@@ -1,5 +1,5 @@
 ---
-title: w64 | Documenti Microsoft
+title: __w64 | Microsoft Docs
 ms.custom: 
 ms.date: 11/04/2016
 ms.reviewer: 
@@ -23,11 +23,11 @@ ms.author: mblome
 manager: ghogen
 ms.workload:
 - cplusplus
-ms.openlocfilehash: 065a852733ac6b5863b4dc8f60548225dcf13b8d
-ms.sourcegitcommit: 8fa8fdf0fbb4f57950f1e8f4f9b81b4d39ec7d7a
+ms.openlocfilehash: 12fbe8f02831561e2061fc8ac978c9a13936ae6f
+ms.sourcegitcommit: eeb2b5ad8d3d22514a7b9bd7d756511b69ae0ccf
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 03/15/2018
 ---
 # <a name="w64"></a>__w64
 
@@ -37,37 +37,37 @@ Questa parola chiave è obsoleta. Nelle versioni di Visual Studio precedenti a V
   
 ## <a name="syntax"></a>Sintassi  
   
-> *tipo* **w64** *identificatore*  
-```  
+> *type* **__w64** *identifier*  
+ 
   
-### Parameters  
+### <a name="parameters"></a>Parametri  
 
 *type*  
- One of the three types that could cause problems in code being ported from a 32-bit to a 64-bit compiler: `int`, `long`, or a pointer.  
+ Uno dei tre tipi che potrebbe provocare problemi nel codice trasferito da un compilatore a 32 bit a uno a 64 bit è `int`, `long` oppure un puntatore.  
   
 *identifier*  
-The identifier for the variable you are creating.  
+Identificatore per la variabile in fase di creazione.  
   
-## Remarks  
+## <a name="remarks"></a>Note  
   
 > [!IMPORTANT]
->  The [/Wp64](../build/reference/wp64-detect-64-bit-portability-issues.md) compiler option and `__w64` keyword are deprecated in Visual Studio 2010 and Visual Studio 2013 and removed starting in Visual Studio 2013. If you use the `/Wp64` compiler option on the command line, the compiler issues [Command-Line Warning D9002](http://msdn.microsoft.com/en-us/c58b405b-0f26-434e-b57f-4f05e1ca81e6). The `__w64` keyword is silently ignored. Instead of using this option and keyword to detect 64-bit portability issues, use a Visual C++ compiler that targets a 64-bit platform. For more information, see [Configure Visual C++ for 64-bit, x64 targets](../build/configuring-programs-for-64-bit-visual-cpp.md).  
+>  Il [/Wp64](../build/reference/wp64-detect-64-bit-portability-issues.md) l'opzione del compilatore e `__w64` (parola chiave) sono deprecati in Visual Studio 2010 e Visual Studio 2013 e rimossi a partire da Visual Studio 2013. Se si utilizza il `/Wp64` opzione del compilatore sulla riga di comando, il compilatore rilascia [avviso della riga di comando D9002](http://msdn.microsoft.com/en-us/c58b405b-0f26-434e-b57f-4f05e1ca81e6). La parola chiave `__w64` viene ignorata automaticamente. Anziché usare questa opzione e parola chiave per rilevare i problemi della portabilità a 64 bit, usare un compilatore di Visual C++ che ha come destinazione una piattaforma a 64 bit. Per ulteriori informazioni, vedere [configurare Visual C++ per x64 a 64 bit, destinazioni](../build/configuring-programs-for-64-bit-visual-cpp.md).  
   
- Any typedef that has `__w64` on it must be 32 bits on x86 and 64 bits on x64.  
+ Qualsiasi typedef con `__w64` deve essere a 32 bit su computer x86 e a 64 bit su computer x64.  
   
- To detect portability issues by using versions of the Visual C++ compiler earlier than Visual Studio 2010, the `__w64` keyword should be specified on any typedefs that change size between 32 bit and 64 bit platforms. For any such type, `__w64` must appear only on the 32-bit definition of the typedef.  
+ Per rilevare problemi di portabilità usando versioni del compilatore Visual C++ precedenti a Visual Studio 2010, la parola chiave `__w64` deve essere specificata in tutti i typedef che cambiano dimensione tra le piattaforme a 32 e a 64 bit. Per tali tipi, `__w64` deve apparire solo nella definizione a 32 bit di typedef.  
   
- The `__w64` keyword is ignored if the compilation does not use `/Wp64`.  
+ La parola chiave `__w64` viene ignorata se la compilazione non usa `/Wp64`.  
   
- For more information about porting to 64-bit, see the following topics:  
+ Per altre informazioni sulla portabilità a 64 bit, vedere i seguenti argomenti:  
   
--   [Compiler Options](../build/reference/compiler-options.md)  
+-   [Opzioni del compilatore](../build/reference/compiler-options.md)  
   
--   [Porting 32-Bit Code to 64-Bit Code](../build/common-visual-cpp-64-bit-migration-issues.md)  
+-   [Porting di codice a 32 Bit a codice a 64 Bit](../build/common-visual-cpp-64-bit-migration-issues.md)  
   
--   [Configure Visual C++ for 64-bit, x64 targets](../build/configuring-programs-for-64-bit-visual-cpp.md)  
+-   [Configurare Visual C++ per destinazioni x64 a 64 bit](../build/configuring-programs-for-64-bit-visual-cpp.md)  
   
-## Example  
+## <a name="example"></a>Esempio  
   
 ```cpp  
 // __w64.cpp  
