--- a/docs/cpp/m128.md
+++ b/docs/cpp/m128.md
@@ -16,12 +16,12 @@ author: mikeblome
 ms.author: mblome
 ms.workload:
 - cplusplus
-ms.openlocfilehash: d92df889e728c15060fbfa7744781e9bcfd4ddd1
-ms.sourcegitcommit: 1fd1eb11f65f2999dfd93a2d924390ed0a0901ed
+ms.openlocfilehash: 6b6eafb64dde18f0f106ab40d144527046f8998b
+ms.sourcegitcommit: b217daee32d3413cf33753d9b4dc35a0022b1bfa
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/10/2018
-ms.locfileid: "37943206"
+ms.lasthandoff: 07/24/2018
+ms.locfileid: "39233459"
 ---
 # <a name="m128"></a>__m128
 ## <a name="microsoft-specific"></a>Sezione specifica Microsoft  
@@ -38,7 +38,7 @@ int main() {
 ## <a name="remarks"></a>Note  
  Non è necessario accedere il **__m128** direttamente ai campi. È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m128** mappe per i registri XMM [0-7].  
   
- Le variabili di tipo **_m128** vengono automaticamente allineate su limiti di 16 byte.  
+ Le variabili di tipo **__m128** vengono automaticamente allineate su limiti di 16 byte.  
   
  Il **__m128** tipo di dati non è supportato nei processori ARM.  
   
