--- a/docs/cpp/w64.md
+++ b/docs/cpp/w64.md
@@ -18,12 +18,12 @@ author: mikeblome
 ms.author: mblome
 ms.workload:
 - cplusplus
-ms.openlocfilehash: cced5b3be1c6dd8a8e664e4a8536d9dd4093d4a0
-ms.sourcegitcommit: 51f804005b8d921468775a0316de52ad39b77c3e
+ms.openlocfilehash: f868092e858ecc3ed5fa9f6d2eff94bb2a8d8307
+ms.sourcegitcommit: 9a0905c03a73c904014ec9fd3d6e59e4fa7813cd
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/02/2018
-ms.locfileid: "39462173"
+ms.lasthandoff: 08/29/2018
+ms.locfileid: "43195307"
 ---
 # <a name="w64"></a>__w64
 
@@ -46,7 +46,7 @@ Identificatore per la variabile in fase di creazione.
 ## <a name="remarks"></a>Note  
   
 > [!IMPORTANT]
->  Il [/Wp64](../build/reference/wp64-detect-64-bit-portability-issues.md) l'opzione del compilatore e **__w64** (parola chiave) sono deprecati in Visual Studio 2010 e Visual Studio 2013 e rimossi a partire da Visual Studio 2013. Se si usa la `/Wp64` opzione del compilatore sulla riga di comando, il compilatore rilascia [avviso della riga di comando D9002](http://msdn.microsoft.com/c58b405b-0f26-434e-b57f-4f05e1ca81e6). Il **__w64** (parola chiave) viene ignorata automaticamente. Anziché usare questa opzione e parola chiave per rilevare i problemi della portabilità a 64 bit, usare un compilatore di Visual C++ che ha come destinazione una piattaforma a 64 bit. Per altre informazioni, vedere [configurare Visual C++ a 64 bit x64 destinazioni](../build/configuring-programs-for-64-bit-visual-cpp.md).  
+>  Il [/Wp64](../build/reference/wp64-detect-64-bit-portability-issues.md) l'opzione del compilatore e **__w64** (parola chiave) sono deprecati in Visual Studio 2010 e Visual Studio 2013 e rimossi a partire da Visual Studio 2013. Se si usa la `/Wp64` opzione del compilatore sulla riga di comando, il compilatore rilascia [avviso della riga di comando D9002](https://msdn.microsoft.com/c58b405b-0f26-434e-b57f-4f05e1ca81e6). Il **__w64** (parola chiave) viene ignorata automaticamente. Anziché usare questa opzione e parola chiave per rilevare i problemi della portabilità a 64 bit, usare un compilatore di Visual C++ che ha come destinazione una piattaforma a 64 bit. Per altre informazioni, vedere [configurare Visual C++ a 64 bit x64 destinazioni](../build/configuring-programs-for-64-bit-visual-cpp.md).  
   
  Qualsiasi typedef con **__w64** deve essere a 32 bit su x86 e a 64 bit su x64.  
   
