--- a/docs/error-messages/compiler-warnings/c5046.md
+++ b/docs/error-messages/compiler-warnings/c5046.md
@@ -1,24 +1,24 @@
 ---
 title: C5046 avviso del compilatore
-ms.date: 10/22/2018
+ms.date: 3/21/2019
 f1_keywords:
 - C5046
 helpviewer_keywords:
 - C5046
-ms.openlocfilehash: d9ca93963491cb763e093679e0e90596f730f302
-ms.sourcegitcommit: 6052185696adca270bc9bdbec45a626dd89cdcdd
+ms.openlocfilehash: 18036babfb1b1009111d8c7e56d2e207a56dc549
+ms.sourcegitcommit: 42e65c171aaa17a15c20b155d22e3378e27b4642
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/31/2018
-ms.locfileid: "50512566"
+ms.lasthandoff: 03/22/2019
+ms.locfileid: "58356127"
 ---
 # <a name="compiler-warning-level-2-c5046"></a>Del compilatore (livello 2) Avviso C5046
 
-> «*funzione*': simbolo relative a tipi con collegamento interno non definito
+> «*funzione*': Tipo che interessa di simboli con collegamento interno non definito
 
 ## <a name="remarks"></a>Note
 
-Il compilatore ha rilevato un utilizzo di una funzione che non dispone di una definizione, ma la firma di questa funzione prevede tipi che non sono visibili all'esterno di questa unità di conversione. Poiché questi tipi non sono visibili esternamente, nessun altra unità di conversione può fornire una definizione per questa funzione, in modo che il programma non può essere collegato.
+Il compilatore ha rilevato un utilizzo di una funzione che non dispone di una definizione, ma la firma di questa funzione prevede tipi che non sono visibili all'esterno di questa unità di conversione. Poiché questi tipi non visibili esternamente, nessun altra unità di conversione può fornire una definizione per questa funzione, in modo che il programma non può essere collegato.
 
 I tipi che non sono visibili tra unità di conversione includono:
 
@@ -28,7 +28,7 @@ I tipi che non sono visibili tra unità di conversione includono:
 
 - Specializzazioni dei modelli che usano questi tipi come argomenti di modello.
 
-Questo avviso è stata introdotta in Visual Studio 2017.
+Questo avviso è stata introdotta in Visual Studio 2017 versione 15.8.
 
 ## <a name="example"></a>Esempio
 
