commit translated contents

--- a/docs/error-messages/compiler-warnings/c5038.md
+++ b/docs/error-messages/compiler-warnings/c5038.md
@@ -1,34 +1,40 @@
 ---
 title: Avviso del compilatore C5038
-ms.date: 02/16/2018
+description: Descrive le cause e le correzioni per gli avvisi del compilatore C5038.
+ms.date: 10/11/2019
 helpviewer_keywords:
 - C5038
-ms.openlocfilehash: 413b880c1859e7ce2fe7acaa112309c728cbee08
-ms.sourcegitcommit: 0ab61bc3d2b6cfbd52a16c6ab2b97a8ea1864f12
+ms.openlocfilehash: 8038556a58b88ea99a795969479295c716a1c187
+ms.sourcegitcommit: 170f5de63b0fec8e38c252b6afdc08343f4243a6
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62152397"
+ms.lasthandoff: 10/11/2019
+ms.locfileid: "72276820"
 ---
 # <a name="compiler-warning-c5038"></a>Avviso del compilatore C5038
 
-> membro dati '*membro1*'verrà inizializzato dopo il membro dati'*membro2*'membro dati'*membro*'verrà inizializzato dopo la classe base'*base_class* '
+> il membro dati '*member1*' verrà inizializzato dopo il membro dati '*membro2*' \
+> il membro dati '*member*' verrà inizializzato dopo la classe base '*BASE_CLASS*'
 
-I membri di classe vengono inizializzati nell'ordine in cui sono dichiarati e non l'ordine in cui compaiono negli elenchi di inizializzatori. Questo avviso indica che l'ordine di inizializzazione non è lo stesso dell'ordine di dichiarazione dei membri dati o le classi di base. Questo può causare un comportamento di runtime indefinito se l'inizializzazione di un membro nell'elenco dipende l'inizializzazione di un membro dichiarato in un secondo momento.
+## <a name="remarks"></a>Note
 
-Questo avviso è stato introdotto in Visual Studio 2017 versione 15.3 ed è disattivata per impostazione predefinita. Uso [/Wall](../../build/reference/compiler-option-warning-level.md) per abilitare tutti gli avvisi che sono disattivate per impostazione predefinita, o __/w__*n*__5038__ abilitare C5038 come livello *n* avviso. Per altre informazioni, vedere [del compilatore avvisi che sono disattivata per impostazione predefinita](../../preprocessor/compiler-warnings-that-are-off-by-default.md). Per informazioni su come disabilitare gli avvisi dalla versione del compilatore, vedere [gli avvisi del compilatore dalla versione del compilatore](compiler-warnings-by-compiler-version.md).
+I membri di classe vengono inizializzati nell'ordine in cui sono dichiarati e non nell'ordine in cui compaiono negli elenchi di inizializzatori. Questo avviso indica che l'ordine di inizializzazione non è uguale all'ordine di dichiarazione dei membri dati o delle classi di base. Questo ordine può causare un comportamento di runtime non definito, se l'inizializzazione di un membro nell'elenco dipende dall'inizializzazione di un membro dichiarato in un secondo momento.
+
+Questo avviso è nuovo in Visual Studio 2017 versione 15,3 ed è disattivato per impostazione predefinita. Usare [/Wall](../../build/reference/compiler-option-warning-level.md) per abilitare tutti gli avvisi che sono disattivati per impostazione predefinita oppure __/w__*n*__5038__ per abilitare C5038 come avviso di livello *n* . Per ulteriori informazioni, vedere [avvisi del compilatore disattivati per impostazione predefinita](../../preprocessor/compiler-warnings-that-are-off-by-default.md). Per informazioni su come disabilitare gli avvisi in base alla versione del compilatore, vedere [avvisi del compilatore in base alla versione del](compiler-warnings-by-compiler-version.md)compilatore.
 
 ## <a name="example"></a>Esempio
 
-Nell'esempio seguente, Visual Studio 2017 versione 15.3 (con /Wall) genera "avviso C5038: membro dati 'Y' verrà inizializzato dopo il membro dati 'A::x'":
+Nell'esempio seguente, il compilatore (quando si usa/w15038) genera "Warning C5038: il membro dati ' A:: y ' verrà inizializzato dopo il membro dati ' A:: x '":
 
 ```cpp
+// C5038.cpp
+// Compile using: cl /EHsc /c /w15038 C5038.cpp
 struct A
 {
-    A(int a) : y(a), x(y) {} // C5938 Initialized in reverse, y reused
+    A(int a) : y(a), x(y) {} // C5038, Initialized in reverse, y reused
     int x;
     int y;
 };
 ```
 
-Per risolvere questo problema, disporre l'elenco di inizializzatori nello stesso ordine delle dichiarazioni. Viene generato un avviso analogo quando uno o entrambi gli inizializzatori fanno riferimento a membri della classe di base.
+Per risolvere questo problema, disporre l'elenco di inizializzatori in modo che abbia lo stesso ordine delle dichiarazioni. Viene generato un avviso analogo quando uno o entrambi gli inizializzatori fanno riferimento a membri della classe di base.
