--- a/docs/assembler/masm/dot-386.md
+++ b/docs/assembler/masm/dot-386.md
@@ -1,21 +1,21 @@
 ---
 title: .386
-ms.date: 08/30/2018
+ms.date: 11/05/2019
 f1_keywords:
 - .386
 helpviewer_keywords:
 - .386 directive
 ms.assetid: a270d215-2d8c-4a86-9dcf-62d6e2fbfbb6
-ms.openlocfilehash: a6cb00dd3283146d42b3d65fe796a7022fae1d3f
-ms.sourcegitcommit: 0ab61bc3d2b6cfbd52a16c6ab2b97a8ea1864f12
+ms.openlocfilehash: 115194524946fd072e0d71ccab9519a147b4856a
+ms.sourcegitcommit: 45f1d889df633f0f7e4a8e813b46fa73c9858b81
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62178769"
+ms.lasthandoff: 11/06/2019
+ms.locfileid: "73702979"
 ---
-# <a name="386"></a>.386
+# <a name="386-32-bit-masm"></a>.386 (MASM a 32 bit)
 
-Consente di assembly di istruzioni senza privilegi per il processore 80386; Disabilita l'assembly di istruzioni introdotte con processori più avanti.
+Abilita l'assembly di istruzioni senza privilegi per il processore 80386; Disabilita l'assembly di istruzioni introdotte con i processori successivi. (solo MASM a 32 bit).
 
 ## <a name="syntax"></a>Sintassi
 
@@ -23,7 +23,7 @@ Consente di assembly di istruzioni senza privilegi per il processore 80386; Disa
 
 ## <a name="remarks"></a>Note
 
-Abilita anche le 80387 istruzioni.
+Abilita anche le istruzioni 80387.
 
 ## <a name="see-also"></a>Vedere anche
 
