commit translated contents

--- a/docs/assembler/masm/dot-586.md
+++ b/docs/assembler/masm/dot-586.md
@@ -13,9 +13,9 @@ ms.contentlocale: it-IT
 ms.lasthandoff: 11/22/2019
 ms.locfileid: "74398663"
 ---
-# <a name="586-32-bit-masm"></a>.586 (32-bit MASM)
+# <a name="586-32-bit-masm"></a>.586 (MASM a 32 bit)
 
-Enables assembly of nonprivileged instructions for the Pentium processor. (32-bit MASM only.)
+Consente l'assembly di istruzioni senza privilegi per il processore Pentium. (solo MASM a 32 bit).
 
 ## <a name="syntax"></a>Sintassi
 
