commit translated contents

--- a/docs/error-messages/compiler-warnings/c4473.md
+++ b/docs/error-messages/compiler-warnings/c4473.md
@@ -1,28 +1,30 @@
 ---
-title: C4473 avviso del compilatore
+title: Avviso del compilatore C4473
 ms.date: 02/16/2018
+f1_keywords:
+- C4473
 helpviewer_keywords:
 - C4473
-ms.openlocfilehash: fbf940a4b2659542c9e5533687094bd1d45efe1a
-ms.sourcegitcommit: 0ab61bc3d2b6cfbd52a16c6ab2b97a8ea1864f12
+ms.openlocfilehash: a1d46676dddf3089dc573be9e84fe0779fb18c87
+ms.sourcegitcommit: 8762a3f9b5476b4dee03f0ee8064ea606550986e
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62281205"
+ms.lasthandoff: 12/04/2019
+ms.locfileid: "74810702"
 ---
-# <a name="compiler-warning-level-1-c4473"></a>Compilatore Warning (level 1) C4473
+# <a name="compiler-warning-level-1-c4473"></a>Avviso del compilatore (livello 1) C4473
 
-> '*funzione*': passati argomenti insufficienti per segnaposto della stringa di formato e i relativi parametri prevedono *numero* argomenti variadic, ma *numero* sono stati specificati i manca l'argomento variadic *indice* richiesto da stringa di formato '*format_string*' in questo argomento viene usato da questo argomento viene usato come larghezza del campo in questo argomento viene usato un identificatore di conversione come una precisione di questo argomento viene usato come dimensioni del buffer
+> '*Function*': non sono stati passati argomenti sufficienti per i segnaposto di stringa di formato e i relativi parametri prevedono argomenti di *numero* Variadic, ma è stato specificato un *numero* che indica che l' *Indice* dell'argomento Variadic mancante è richiesto dalla stringa di formato '*FORMAT_STRING*'. questo argomento viene usato da un identificatore di conversione. questo argomento viene usato come larghezza di campo.
 
-Il compilatore ha rilevato una mancata corrispondenza tra il numero di argomenti necessari per soddisfare i segnaposto in una stringa di formato e il numero di argomenti forniti. Utilizzo corretto delle famiglie di funzioni printf e scanf delle funzioni variadic, è necessario fornire un numero di argomenti come specificato dalla stringa di formato. Alcuni segnaposto richiedono argomenti aggiuntivi, per specificare la larghezza, precisione o le dimensioni del buffer, nonché un argomento per il contenuto. Una mancata corrispondenza indica in genere che è presente un bug nel codice.
+Il compilatore ha rilevato una mancata corrispondenza tra il numero di argomenti necessari per soddisfare i segnaposto in una stringa di formato e il numero di argomenti forniti. Per utilizzare correttamente le famiglie printf e scanf delle funzioni Variadic, è necessario specificare tutti gli argomenti specificati dalla stringa di formato. Alcuni segnaposto richiedono argomenti aggiuntivi, per specificare la larghezza, la precisione o la dimensione del buffer, nonché un argomento per il contenuto. Una mancata corrispondenza indica in genere la presenza di un bug nel codice.
 
-Per informazioni sugli argomenti associati ai segnaposto della stringa di formato della famiglia printf, vedere [sintassi per la specifica di formato: funzioni printf e wprintf](../../c-runtime-library/format-specification-syntax-printf-and-wprintf-functions.md). Vedere la documentazione per informazioni specifiche per la funzione *funzione*.
+Per informazioni sugli argomenti associati ai segnaposto della stringa di formato della famiglia printf, vedere Sintassi per la [specifica del formato: funzioni printf e wprintf](../../c-runtime-library/format-specification-syntax-printf-and-wprintf-functions.md). Per informazioni specifiche sulla *funzione*Function, vedere la documentazione.
 
-Questo avviso è stata introdotta in Visual Studio 2015.
+Questo avviso è nuovo in Visual Studio 2015.
 
 ## <a name="example"></a>Esempio
 
-Le due modalità avviso C4473 può essere causato da una stringa di formato seguenti mostrano esempi di mancata corrispondenza con i relativi argomenti e viene mostrato inoltre come risolvere i problemi.
+In questi esempi vengono illustrati due modi in cui l'avviso C4473 può essere causato da una stringa di formato non corrispondente ai relativi argomenti e viene illustrato come risolvere i problemi.
 
 ```cpp
 // c4473p.cpp
@@ -36,7 +38,7 @@ void print_func(int a, float f)
 }
 ```
 
-Nel primo messaggio di errore, il compilatore rileva che un argomento non è presente, ma non è possibile stabilire se l'argomento mancante è la larghezza o del contenuto, in modo che si presuppone che l'argomento fornito è il primo, per la larghezza e l'argomento mancante è il secondo , per l'identificatore di conversione del tipo. È necessario esaminare la stringa di formato per determinare l'effettiva argomento mancante.
+Nel primo messaggio di errore, il compilatore rileva che manca un argomento, ma non può determinare se l'argomento mancante è la larghezza o il contenuto, quindi presuppone che l'argomento fornito sia il primo, per la larghezza e che l'argomento mancante sia il secondo , per l'identificatore di conversione del tipo. È necessario esaminare la stringa di formato per determinare l'argomento mancante effettivo.
 
 ```cpp
 // c4473s.cpp
@@ -52,4 +54,4 @@ void scan_func(int a, float f)
 }
 ```
 
-In questo esempio **scanf_s** richiede due argomenti per ogni segnaposto, uno per fornire l'indirizzo in cui scrivere e il secondo per specificare la dimensione del primo. Consultare la documentazione per ogni funzione di libreria per una spiegazione degli argomenti obbligatori.
+In questo esempio **scanf_s** richiede due argomenti per ogni segnaposto, uno per fornire l'indirizzo in cui scrivere e un secondo per fornire le dimensioni del primo. Per una spiegazione degli argomenti obbligatori, vedere la documentazione relativa a ogni funzione di libreria.
