--- a/docs/error-messages/compiler-warnings/c4477.md
+++ b/docs/error-messages/compiler-warnings/c4477.md
@@ -1,28 +1,30 @@
 ---
-title: C4477 avviso del compilatore
+title: Avviso del compilatore C4477
 ms.date: 02/16/2018
+f1_keywords:
+- C4477
 helpviewer_keywords:
 - C4477
-ms.openlocfilehash: 21db3a5890f08eea2c03a7373494bea30922af5c
-ms.sourcegitcommit: 0ab61bc3d2b6cfbd52a16c6ab2b97a8ea1864f12
+ms.openlocfilehash: 43867f65c380cb67d2174947fe0159011c13f126
+ms.sourcegitcommit: 8762a3f9b5476b4dee03f0ee8064ea606550986e
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62281024"
+ms.lasthandoff: 12/04/2019
+ms.locfileid: "74810696"
 ---
-# <a name="compiler-warning-level-1-c4477"></a>Compilatore Warning (level 1) C4477
+# <a name="compiler-warning-level-1-c4477"></a>Avviso del compilatore (livello 1) C4477
 
-> '*funzione*': stringa di formato '*stringa*'richiede un argomento di tipo'*tipo*', ma l'argomento variadic *numero* ha tipo '*tipo*'
+> '*Function*': la stringa di formato '*String*' richiede un argomento di tipo '*Type*', ma il *numero* dell'argomento Variadic è di tipo '*Type*'
 
-Il compilatore ha rilevato una mancata corrispondenza tra il tipo di argomento necessario per soddisfare il segnaposto in una stringa di formato e il tipo di argomento fornito. Utilizzo corretto delle famiglie di funzioni printf e scanf delle funzioni variadic, è necessario fornire gli argomenti dei tipi specificati dalla stringa di formato. Una mancata corrispondenza indica in genere che è presente un bug nel codice.
+Il compilatore ha rilevato una mancata corrispondenza tra il tipo di argomento necessario per soddisfare il segnaposto in una stringa di formato e il tipo di argomento fornito. Per utilizzare correttamente le famiglie printf e scanf delle funzioni Variadic, è necessario fornire gli argomenti dei tipi specificati dalla stringa di formato. Una mancata corrispondenza indica in genere la presenza di un bug nel codice.
 
-Per informazioni sugli argomenti associati ai segnaposto della stringa di formato della famiglia printf, vedere [sintassi per la specifica di formato: funzioni printf e wprintf](../../c-runtime-library/format-specification-syntax-printf-and-wprintf-functions.md). Vedere la documentazione per informazioni specifiche per la funzione *funzione*.
+Per informazioni sugli argomenti associati ai segnaposto della stringa di formato della famiglia printf, vedere Sintassi per la [specifica del formato: funzioni printf e wprintf](../../c-runtime-library/format-specification-syntax-printf-and-wprintf-functions.md). Per informazioni specifiche sulla *funzione*Function, vedere la documentazione.
 
-Questo avviso è stata introdotta in Visual Studio 2015.
+Questo avviso è nuovo in Visual Studio 2015.
 
 ## <a name="example"></a>Esempio
 
-In questo esempio mostra due C4477 avvisi per la prima funzione printf_s, quando vengono trovati due argomenti di tipo non corretto e viene inoltre illustrato come risolvere i problemi.
+In questo esempio vengono illustrati due avvisi C4477 per la prima funzione printf_s, quando due argomenti sono di tipo errato e viene illustrato come risolvere i problemi.
 
 ```cpp
 // C4477p.cpp
@@ -36,4 +38,4 @@ void print_func(int a, float f)
 }
 ```
 
-Nel primo messaggio di errore, il compilatore rileva che un **doppie** argomento viene fornito durante un' **int** è previsto. Oggetto **float** viene promossa automaticamente a **double** nell'elenco di argomenti variadic. Il secondo messaggio di errore indica che il compilatore prevedeva una **doppie** argomento, ma un' **int** è stato fornito. Il compilatore non può stabilire che si è scambiati l'ordine degli argomenti. È necessario esaminare la stringa di formato per determinare l'ordine di argomento effettivo e specificare i tipi di argomento corretti.
+Nel primo messaggio di errore, il compilatore rileva che viene fornito un argomento Double quando è previsto un **valore** **int** . Un **float** viene innalzato automaticamente a **doppio** nell'elenco di argomenti Variadic. Il secondo messaggio di errore indica che il compilatore ha previsto un doppio argomento, ma è stato specificato un **valore** **int** . Il compilatore non è in grado di indicare che è stato effettuato lo swapping dell'ordine degli argomenti. È necessario esaminare la stringa di formato per determinare l'ordine effettivo degli argomenti e fornire i tipi di argomento corretti.
