--- a/docs/error-messages/compiler-warnings/c5045.md
+++ b/docs/error-messages/compiler-warnings/c5045.md
@@ -1,28 +1,30 @@
 ---
-title: C5045 avviso del compilatore
+title: Avviso del compilatore C5045
 ms.date: 06/21/2018
+f1_keywords:
+- C5045
 helpviewer_keywords:
 - C5045
-ms.openlocfilehash: da97c4e01f85b18ff79132f9365bf9bd282c89ce
-ms.sourcegitcommit: 0ab61bc3d2b6cfbd52a16c6ab2b97a8ea1864f12
+ms.openlocfilehash: cd1d4319a832f988e33009b7fd1d1f3ba1764868
+ms.sourcegitcommit: 8762a3f9b5476b4dee03f0ee8064ea606550986e
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62152514"
+ms.lasthandoff: 12/04/2019
+ms.locfileid: "74810582"
 ---
-# <a name="compiler-warning-c5045"></a>C5045 avviso del compilatore
+# <a name="compiler-warning-c5045"></a>Avviso del compilatore C5045
 
-> Compilatore inserirà la mitigazione Spectre per il carico di memoria se l'opzione /Qspectre specificato
+> Il compilatore inserirà la mitigazione Spectre per il carico di memoria se è stata specificata l'opzione/Qspectre
 
 ## <a name="remarks"></a>Note
 
-Avviso C5045 consente vedere i modelli nel codice che causano la mitigazione Spectre, ad esempio un LFENCE, deve essere inserito quando il [/Qspectre](../../build/reference/qspectre.md) è specificata l'opzione del compilatore. Ciò consente di identificare i file di codice interessati dal problema della protezione. Questo avviso è puramente informativo: la mitigazione non verrà inserita fino a quando non viene ricompilata usando la **/Qspectre** passare. La funzionalità di C5045 è indipendente dal **/Qspectre** passare, in modo che è possibile usarli entrambi nella stessa compilazione.
+Avviso C5045 consente di vedere quali modelli nel codice provocano l'inserimento di una mitigazione Spectre, ad esempio un LFENCE, quando viene specificata l'opzione del compilatore [/Qspectre](../../build/reference/qspectre.md) . In questo modo è possibile identificare i file di codice interessati dal problema di sicurezza. Questo avviso è puramente informativo: la mitigazione non viene inserita fino a quando non si esegue la ricompilazione con l'opzione **/Qspectre** . La funzionalità di C5045 è indipendente dall'opzione **/Qspectre** , quindi è possibile usarla nella stessa compilazione.
 
-Questo avviso è stato introdotto in Visual Studio 2017 versione 15.7 ed è disattivata per impostazione predefinita. Uso [/Wall](../../build/reference/compiler-option-warning-level.md) per abilitare tutti gli avvisi che sono disattivate per impostazione predefinita, o __/w__*n*__5038__ abilitare C5045 come livello *n* avviso. Nell'IDE, il livello di avviso predefinito è **/w3** e questo avviso può essere abilitato nel progetto **pagine delle proprietà** finestra di dialogo. Open **le proprietà di configurazione** > **C/C++** > **della riga di comando** e il **opzioni aggiuntive** aggiungere */w35045*, quindi scegliere **OK**. Per altre informazioni, vedere [avvisi del compilatore disattivati per impostazione predefinita](../../preprocessor/compiler-warnings-that-are-off-by-default.md). Per informazioni su come disabilitare gli avvisi dalla versione del compilatore, vedere [gli avvisi del compilatore dalla versione del compilatore](compiler-warnings-by-compiler-version.md).
+Questo avviso è nuovo in Visual Studio 2017 versione 15,7 ed è disattivato per impostazione predefinita. Usare [/Wall](../../build/reference/compiler-option-warning-level.md) per abilitare tutti gli avvisi che sono disattivati per impostazione predefinita oppure __/w__*n*__5038__ per abilitare C5045 come avviso di livello *n* . Nell'IDE, il livello di avviso predefinito è **/W3** e questo avviso può essere abilitato nella finestra di dialogo **pagine delle proprietà** del progetto. Aprire **proprietà di configurazione** > riga di **comando** di **C++ C/**  > e nella casella **Opzioni aggiuntive** aggiungere */w35045*, quindi scegliere **OK**. Per ulteriori informazioni, vedere [avvisi del compilatore disattivati per impostazione predefinita](../../preprocessor/compiler-warnings-that-are-off-by-default.md). Per informazioni su come disabilitare gli avvisi in base alla versione del compilatore, vedere [avvisi del compilatore in base alla versione del](compiler-warnings-by-compiler-version.md)compilatore.
 
 ## <a name="example"></a>Esempio
 
-Nell'esempio seguente genera l'avviso C5045 quando viene compilato da Visual Studio 2017 versione 15.7 con il **/Wall** o nella **/w35045** e **/w3** opzioni:
+L'esempio seguente genera l'avviso C5045 quando viene compilato da Visual Studio 2017 versione 15,7 con le opzioni **/Wall** o **/w35045** e **/W3** :
 
 ```cpp
 // C5045.cpp
@@ -62,7 +64,7 @@ void baz(int ** p, int i)
 int main() { }
 ```
 
-L'output del compilatore quando l'avviso è abilitato simile al seguente:
+L'output del compilatore quando l'avviso è abilitato ha un aspetto simile al seguente:
 
 ```Output
 C:\Users\username\source\repos\C5045>cl /W3 /w35045 C5045.cpp
@@ -80,7 +82,7 @@ Copyright (C) Microsoft Corporation.  All rights reserved.
 C5045.obj
 ```
 
-I messaggi di avviso mostrano che la mitigazione sarebbe stata inserita nella riga 16. Vengono inoltre indicati che la soluzione è necessaria perché l'indice i nella riga 15 attiva il carico di memoria su riga 17. La supposizione avviene tra barra e bar1 ma la mitigazione viene applicata quando viene inserita nella riga 16.
+I messaggi di avviso indicano che è stata inserita una mitigazione nella riga 16. Si nota anche che la mitigazione è necessaria perché l'indice i sulla riga 15 inserisce il carico di memoria alla riga 17. La speculazione viene eseguita su barra e bar1, ma la mitigazione è efficace quando viene posizionata alla riga 16.
 
 ## <a name="see-also"></a>Vedere anche
 
