--- a/docs/error-messages/compiler-warnings/c5105.md
+++ b/docs/error-messages/compiler-warnings/c5105.md
@@ -2,14 +2,16 @@
 title: Avviso del compilatore C5105
 description: Descrizione e soluzione di avviso del compilatore C5105.
 ms.date: 09/22/2019
+f1_keywords:
+- C5105
 helpviewer_keywords:
 - C5105
-ms.openlocfilehash: 8e3744faebea389eb7b249ae832e62489e200c3c
-ms.sourcegitcommit: 389c559918d9bfaf303d262ee5430d787a662e92
+ms.openlocfilehash: 310da1b6e8f5e124a5d55080ded8269607025533
+ms.sourcegitcommit: 8762a3f9b5476b4dee03f0ee8064ea606550986e
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/24/2019
-ms.locfileid: "71241108"
+ms.lasthandoff: 12/04/2019
+ms.locfileid: "74810532"
 ---
 # <a name="compiler-warning-level-1-c5105"></a>Avviso del compilatore (livello 1) C5105
 
@@ -17,21 +19,21 @@ ms.locfileid: "71241108"
 
 ## <a name="remarks"></a>Note
 
-Il preprocessore ha rilevato `defined` un operatore nell'output dell'espansione di una macro. Se viene `defined` visualizzato un operatore come risultato dell'espansione di una macro, lo standard C specifica il comportamento come non definito. L'avviso C5105 è un avviso di conformità della portabilità e degli standard, rilasciato perché altri compilatori conformi possono avere un comportamento diverso. Per risolvere il problema, spostare l' `defined` operatore fuori dalla macro o eliminare l'avviso C5105.
+Il preprocessore ha rilevato un operatore `defined` nell'output dell'espansione di una macro. Se viene visualizzato un operatore `defined` come risultato dell'espansione di una macro, lo standard C specifica il comportamento come non definito. L'avviso C5105 è un avviso di conformità della portabilità e degli standard, rilasciato perché altri compilatori conformi possono avere un comportamento diverso. Per risolvere questo problema, spostare l'operatore `defined` fuori dalla macro o eliminare l'avviso C5105.
 
-Comportamento specifico di Microsoft: Il compilatore MSVC valuta l' `defined` operatore normalmente, anche in. `/permissive-`
+Comportamento specifico di Microsoft: il compilatore MSVC valuta normalmente l'operatore `defined`, anche in `/permissive-`.
 
-Questo avviso è nuovo in Visual Studio 2017 versione 15,8. Viene generato solo dal nuovo preprocessore conforme agli standard, specificato dall' `/experimental:preprocessor` opzione del compilatore.
+Questo avviso è nuovo in Visual Studio 2017 versione 15,8. Viene generato solo dal nuovo preprocessore conforme agli standard, specificato dall'opzione del compilatore `/experimental:preprocessor`.
 
 ### <a name="to-turn-off-the-warning-without-code-changes"></a>Per disattivare l'avviso senza modifiche al codice
 
-È possibile disattivare l'avviso per una riga di codice specifica utilizzando il pragma `#pragma warning(suppress : 5105)` [warning](../../preprocessor/warning.md) . È inoltre possibile disattivare l'avviso all'interno di un file utilizzando il pragma `#pragma warning(disable : 5105)`Warning. È possibile disattivare l'avviso a livello globale nelle compilazioni da riga di comando usando l'opzione della riga di comando **/wd5105** .
+È possibile disattivare l'avviso per una riga di codice specifica utilizzando il pragma [warning](../../preprocessor/warning.md) , `#pragma warning(suppress : 5105)`. È anche possibile disattivare l'avviso all'interno di un file usando il pragma warning, `#pragma warning(disable : 5105)`. È possibile disattivare l'avviso a livello globale nelle compilazioni da riga di comando usando l'opzione della riga di comando **/wd5105** .
 
 Per disattivare l'avviso per un intero progetto nell'IDE di Visual Studio:
 
 1. Aprire la finestra di dialogo **pagine delle proprietà** per il progetto. Per informazioni sull'utilizzo della finestra di dialogo Pagine delle proprietà, vedere [pagine delle proprietà](../../build/reference/property-pages-visual-cpp.md).
-1. Selezionare la **pagina Proprietà** > di configurazione**C/C++**  > avanzate.
-1. Modificare la proprietà **Disabilita avvisi specifici** da aggiungere `5105`. Scegliere **OK** per applicare le modifiche.
+1. Selezionare le **proprietà di configurazione** > pagina **Avanzate** di **CC++ /**  > .
+1. Modificare la proprietà **Disabilita avvisi specifici** per aggiungere `5105`. Scegliere **OK** per applicare le modifiche.
 
 ## <a name="example"></a>Esempio
 
