commit translated contents

--- a/docs/cpp/m128i.md
+++ b/docs/cpp/m128i.md
@@ -6,18 +6,18 @@ f1_keywords:
 helpviewer_keywords:
 - __m128i keyword [C++]
 ms.assetid: bd245d68-862c-46dd-9903-6c67c7c5dbcd
-ms.openlocfilehash: 7573b9acafedcb22cda629748a7c962b414c832e
-ms.sourcegitcommit: 0ab61bc3d2b6cfbd52a16c6ab2b97a8ea1864f12
+ms.openlocfilehash: cc5e3bd892e69fa3f7c2667aed4dbf7c0c38dc9d
+ms.sourcegitcommit: a6d63c07ab9ec251c48bc003ab2933cf01263f19
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62258123"
+ms.lasthandoff: 12/05/2019
+ms.locfileid: "74857463"
 ---
-# <a name="m128i"></a>__m128i
+# <a name="__m128i"></a>__m128i
 
-## <a name="microsoft-specific"></a>Sezione specifica Microsoft
+**Sezione specifica Microsoft**
 
-Il **__m128i** tipo di dati, per l'uso con gli intrinseci delle istruzioni Streaming SIMD Extensions 2 (SSE2), è definito in \<emmintrin >.
+Il tipo di dati **__m128i** , da utilizzare con gli intrinseci delle istruzioni Streaming SIMD Extensions 2 (SSE2), è definito in \<emmintrin. h >.
 
 ```cpp
 // data_types__m128i.cpp
@@ -29,14 +29,14 @@ int main() {
 
 ## <a name="remarks"></a>Note
 
-Non è necessario accedere il **__m128i** direttamente ai campi. È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m128i** mappe per i registri XMM [0-7].
+Non è consigliabile accedere direttamente ai campi **__m128i** . È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m128i** esegue il mapping ai registri XMM [0-7].
 
-Le variabili di tipo **_m128i** vengono automaticamente allineate su limiti di 16 byte.
+Le variabili di tipo **_m128i** vengono allineate automaticamente nei limiti di 16 byte.
 
 > [!NOTE]
->  Utilizzo di variabili di tipo **__m128i** causerà il compilatore a generare SSE2 `movdqa` (istruzione). Questa istruzione non causa un errore nei processori Pentium III, ma verrà generato un errore invisibile all'utente, con possibili effetti collaterali causati da istruzioni `movdqa` si traduce nei processori Pentium III.
+>  Se si usano variabili di tipo **__m128i** , il compilatore genererà l'istruzione `movdqa` SSE2. Questa istruzione non causa un errore sui processori Pentium III, ma comporterà un errore invisibile all'utente, con possibili effetti collaterali causati da qualsiasi istruzione `movdqa` convertita in su processori Pentium III.
 
-Il **__m128i** tipo di dati non è supportato nei processori ARM.
+Il tipo di dati **__m128i** non è supportato nei processori ARM.
 
 **Fine sezione specifica Microsoft**
 
