--- a/docs/cpp/w64.md
+++ b/docs/cpp/w64.md
@@ -10,27 +10,25 @@ helpviewer_keywords:
 - 64-bit compiler [C++], __w64 keyword
 - Win64 [C++], __w64 keyword
 ms.assetid: b9d0c820-e132-40bc-b532-56edca132a6c
-ms.openlocfilehash: b0aff4681bb9b3c036eaa61e814687104115fd6a
-ms.sourcegitcommit: da32511dd5baebe27451c0458a95f345144bd439
-ms.translationtype: HT
+ms.openlocfilehash: 33e0b5564012cc645fd8d26fd214d05d0f4223ff
+ms.sourcegitcommit: a6d63c07ab9ec251c48bc003ab2933cf01263f19
+ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 05/07/2019
-ms.locfileid: "65222327"
+ms.lasthandoff: 12/05/2019
+ms.locfileid: "74857190"
 ---
-# <a name="w64"></a>__w64
+# <a name="__w64"></a>__w64
 
-**Sezione specifica Microsoft**
-
-Questa parola chiave è obsoleta. Nelle versioni di Visual Studio precedenti a Visual Studio 2013, ciò consente di contrassegnare le variabili, in modo che quando esegue la compilazione con [/Wp64](../build/reference/wp64-detect-64-bit-portability-issues.md) il compilatore segnalerà eventuali avvisi che verranno segnalati se si utilizza un compilatore a 64 bit.
+Questa parola chiave specifica di Microsoft è obsoleta. Nelle versioni di Visual Studio precedenti a Visual Studio 2013, questo consente di contrassegnare le variabili, in modo che quando si esegue la compilazione con [/Wp64](../build/reference/wp64-detect-64-bit-portability-issues.md) il compilatore segnalerà eventuali avvisi che verrebbero segnalati se si stava eseguendo la compilazione con un compilatore a 64 bit.
 
 ## <a name="syntax"></a>Sintassi
 
-> *tipo di* **__w64** *identificatore*
+> *tipo* **__w64** *identificatore*
 
 ### <a name="parameters"></a>Parametri
 
 *type*<br/>
-Uno dei tre tipi che potrebbe causare problemi nel codice trasferito da 32 bit a un compilatore a 64 bit: **int**, **lungo**, o un puntatore.
+Uno dei tre tipi che potrebbero causare problemi nel codice trasferito da un 32 bit a un compilatore a 64 bit: **int**, **Long**o un puntatore.
 
 *identifier*<br/>
 Identificatore per la variabile in fase di creazione.
@@ -38,21 +36,21 @@ Identificatore per la variabile in fase di creazione.
 ## <a name="remarks"></a>Note
 
 > [!IMPORTANT]
->  Il [/Wp64](../build/reference/wp64-detect-64-bit-portability-issues.md) l'opzione del compilatore e **__w64** (parola chiave) sono deprecati in Visual Studio 2010 e Visual Studio 2013 e rimossi a partire da Visual Studio 2013. Se si usa il `/Wp64` opzione del compilatore sulla riga di comando, il compilatore genera l'avviso della riga di comando D9002. Il **__w64** (parola chiave) viene ignorata automaticamente. Invece di usare questa opzione e questa parola chiave per rilevare i problemi di portabilità a 64 bit, usare un database di Microsoft C++ compilatore che ha come destinazione una piattaforma a 64 bit. Per altre informazioni, vedere [configurare Visual C++ a 64 bit x64 destinazioni](../build/configuring-programs-for-64-bit-visual-cpp.md).
+>  L'opzione del compilatore [/Wp64](../build/reference/wp64-detect-64-bit-portability-issues.md) e la parola chiave **__w64** sono deprecate in Visual Studio 2010 e Visual Studio 2013 e rimosse a partire da Visual Studio 2013. Se si usa l'opzione del compilatore `/Wp64` nella riga di comando, il compilatore rilascia l'avviso della riga di comando D9002. La parola chiave **__w64** viene ignorata automaticamente. Anziché usare questa opzione e questa parola chiave per rilevare i problemi di portabilità a 64 bit, C++ usare un compilatore Microsoft destinato a una piattaforma a 64 bit. Per altre informazioni, vedere [Configure Visual C++ for 64 bit, x64 targets](../build/configuring-programs-for-64-bit-visual-cpp.md).
 
-Qualsiasi typedef con **__w64** deve essere a 32 bit su x86 e a 64 bit su x64.
+Qualsiasi typedef con **__w64** su di esso deve essere 32 bit su x86 e 64 bit su x64.
 
-Per rilevare i problemi di portabilità usando versioni di Microsoft C++ compilatore precedenti a Visual Studio 2010, il **__w64** parola chiave deve essere specificata in tutti i typedef che cambiano dimensione tra le piattaforme a 64 bit e a 32 bit. Per tali tipi, **__w64** deve apparire solo nella definizione a 32 bit di typedef.
+Per rilevare i problemi di portabilità usando versioni del compilatore C++ Microsoft precedenti a Visual Studio 2010, è necessario specificare la parola chiave **__w64** nei typedef che cambiano dimensione tra le piattaforme 32 bit e 64 bit. Per qualsiasi tipo di questo tipo, **__w64** deve apparire solo nella definizione a 32 bit del typedef.
 
-Per garantire la compatibilità con le versioni precedenti, **_w64** è un sinonimo **__w64** , a meno che l'opzione del compilatore [/Za \(Disabilita estensioni linguaggio)](../build/reference/za-ze-disable-language-extensions.md) è specificato.
+Per compatibilità con le versioni precedenti, **_w64** è un sinonimo di **__w64** a meno che non sia specificata l'opzione del compilatore [/za \(Disable Language Extensions)](../build/reference/za-ze-disable-language-extensions.md) .
 
-Il **__w64** parola chiave viene ignorato se la compilazione non usa `/Wp64`.
+La parola chiave **__w64** viene ignorata se la compilazione non usa `/Wp64`.
 
 Per ulteriori informazioni sulla portabilità a 64 bit, vedere i seguenti argomenti:
 
 - [Opzioni del compilatore MSVC](../build/reference/compiler-options.md)
 
-- [Porting di codice a 32 Bit a codice a 64 bit](../build/common-visual-cpp-64-bit-migration-issues.md)
+- [Porting di codice a 32 bit a codice a 64 bit](../build/common-visual-cpp-64-bit-migration-issues.md)
 
 - [Configurare Visual C++ per destinazioni x64 a 64 bit](../build/configuring-programs-for-64-bit-visual-cpp.md)
 
