commit translated contents

--- a/docs/cpp/m128.md
+++ b/docs/cpp/m128.md
@@ -6,18 +6,18 @@ f1_keywords:
 helpviewer_keywords:
 - __m128 keyword [C++]
 ms.assetid: e51a472a-0e3c-4989-9a2a-36adb05273a3
-ms.openlocfilehash: 3e60c96351157e9692a97d5c45409b2fbf48b970
-ms.sourcegitcommit: 0ab61bc3d2b6cfbd52a16c6ab2b97a8ea1864f12
+ms.openlocfilehash: b39c669edac2c6db55b649a5ce0d1f5b794ee222
+ms.sourcegitcommit: a6d63c07ab9ec251c48bc003ab2933cf01263f19
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62245400"
+ms.lasthandoff: 12/05/2019
+ms.locfileid: "74857502"
 ---
-# <a name="m128"></a>__m128
+# <a name="__m128"></a>__m128
 
-## <a name="microsoft-specific"></a>Sezione specifica Microsoft
+**Sezione specifica Microsoft**
 
-Il **dati __m128** tipo, da usare con il Streaming SIMD Extensions e intrinseci delle istruzioni Streaming SIMD Extensions 2, è definito in \<xmmintrin >.
+Il tipo di **dati __m128** , da utilizzare con gli intrinseci delle istruzioni Streaming SIMD Extensions e Streaming SIMD Extensions 2, è definito in \<xmmintrin. h >.
 
 ```cpp
 // data_types__m128.cpp
@@ -29,11 +29,11 @@ int main() {
 
 ## <a name="remarks"></a>Note
 
-Non è necessario accedere il **__m128** direttamente ai campi. È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m128** mappe per i registri XMM [0-7].
+Non è consigliabile accedere direttamente ai campi **__m128** . È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m128** esegue il mapping ai registri XMM [0-7].
 
-Le variabili di tipo **__m128** vengono automaticamente allineate su limiti di 16 byte.
+Le variabili di tipo **__m128** vengono allineate automaticamente nei limiti di 16 byte.
 
-Il **__m128** tipo di dati non è supportato nei processori ARM.
+Il tipo di dati **__m128** non è supportato nei processori ARM.
 
 **Fine sezione specifica Microsoft**
 
