--- a/docs/intrinsics/div128.md
+++ b/docs/intrinsics/div128.md
@@ -6,16 +6,16 @@ f1_keywords:
 helpviewer_keywords:
 - div128 intrinsic
 - _div128 intrinsic
-ms.openlocfilehash: b2ed987803586fe15498aceae259220d892caa29
-ms.sourcegitcommit: 0ab61bc3d2b6cfbd52a16c6ab2b97a8ea1864f12
+ms.openlocfilehash: 47bea62327947cbe84ae3f6da1c7beab49884453
+ms.sourcegitcommit: a6d63c07ab9ec251c48bc003ab2933cf01263f19
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62264207"
+ms.lasthandoff: 12/05/2019
+ms.locfileid: "74858009"
 ---
-# <a name="div128"></a>_div128
+# <a name="_div128"></a>_div128
 
-Il `_div128` intrinseco divide un numero intero da un numero intero a 64 bit a 128 bit. Il valore restituito contiene il quoziente e la funzione intrinseca restituisce il resto tramite un parametro del puntatore. `_div128` viene **specifico di Microsoft**.
+Il `_div128` Intrinsic divide un intero a 128 bit da un Integer a 64 bit. Il valore restituito include il quoziente e la funzione intrinseca restituisce il resto tramite un parametro del puntatore. `_div128` è **specifico di Microsoft**.
 
 ## <a name="syntax"></a>Sintassi
 
@@ -31,32 +31,32 @@ __int64 _div128(
 ### <a name="parameters"></a>Parametri
 
 *highDividend* \
-[in] I 64 bit alti del dividendo.
+in Bit 64 alti del dividendo.
 
 *lowDividend* \
-[in] I 64 bit bassi del dividendo.
+in Bit 64 bassi del dividendo.
 
-*divisor* \
-[in] Integer a 64 bit per cui dividere.
+*divisore* \
+in Intero a 64 bit per cui dividere.
 
 *remainder* \
-[out] I bit di integer a 64 bit del resto.
+out Bit Integer a 64 bit del resto.
 
 ## <a name="return-value"></a>Valore restituito
 
-I 64 bit del quoziente.
+Bit 64 del quoziente.
 
 ## <a name="remarks"></a>Note
 
-Passare a 64 bit superiori del dividendo 128 bit nel *highDividend*e i 64 bit in basso *lowDividend*. La funzione intrinseca divide questo valore per *divisore*. Archivia la parte restante nel valore integer a 64 bit a cui punta *resto*e restituisce i 64 bit del quoziente.
+Passare i bit 64 superiori del dividendo a 128 bit in *highDividend*e i 64 bit inferiori in *lowDividend*. La funzione intrinseca divide questo valore per *divisore*. Archivia il resto nell'intero a 64 bit a cui punta il *resto*e restituisce i 64 bit del quoziente.
 
-Il `_div128` intrinseco è stato introdotto nella versione RTM di Visual Studio 2019.
+Il `_div128` intrinseco è disponibile a partire da Visual Studio 2019 RTM.
 
-## <a name="requirements"></a>Requisiti
+## <a name="requirements"></a>Requisiti di
 
-|Funzione intrinseca|Architettura|Intestazione|
+|Funzione intrinseca|Architettura|Header|
 |---------------|------------------|------------|
-|`_div128`|X64|\<immintrin.h>|
+|`_div128`|x64|\<immintrin.h>|
 
 ## <a name="see-also"></a>Vedere anche
 
