--- a/docs/cpp/m128d.md
+++ b/docs/cpp/m128d.md
@@ -6,18 +6,18 @@ f1_keywords:
 helpviewer_keywords:
 - __m128d keyword [C++]
 ms.assetid: 8082c7c0-a955-4b53-9d82-9bb91c623f72
-ms.openlocfilehash: 80f799e846fe908a8e97e5c9e3bd6816078a6688
-ms.sourcegitcommit: 0ab61bc3d2b6cfbd52a16c6ab2b97a8ea1864f12
+ms.openlocfilehash: 6fad1419310e04f0827a43df3f8a0531ba0d094e
+ms.sourcegitcommit: a6d63c07ab9ec251c48bc003ab2933cf01263f19
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62231962"
+ms.lasthandoff: 12/05/2019
+ms.locfileid: "74857476"
 ---
-# <a name="m128d"></a>__m128d
+# <a name="__m128d"></a>__m128d
 
-## <a name="microsoft-specific"></a>Sezione specifica Microsoft
+**Sezione specifica Microsoft**
 
-Il **__m128d** tipo di dati, per l'uso con gli intrinseci delle istruzioni Streaming SIMD Extensions 2, è definito in \<emmintrin >.
+Il tipo di dati **__m128d** , da utilizzare con gli intrinseci delle istruzioni Streaming SIMD Extensions 2, è definito in \<emmintrin. h >.
 
 ```cpp
 // data_types__m128d.cpp
@@ -29,11 +29,11 @@ int main() {
 
 ## <a name="remarks"></a>Note
 
-Non è necessario accedere il **__m128d** direttamente ai campi. È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m128** mappe per i registri XMM [0-7].
+Non è consigliabile accedere direttamente ai campi **__m128d** . È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m128** esegue il mapping ai registri XMM [0-7].
 
-Le variabili di tipo **_m128d** vengono automaticamente allineate su limiti di 16 byte.
+Le variabili di tipo **_m128d** vengono allineate automaticamente nei limiti di 16 byte.
 
-Il **__m128d** tipo di dati non è supportato nei processori ARM.
+Il tipo di dati **__m128d** non è supportato nei processori ARM.
 
 **Fine sezione specifica Microsoft**
 
