--- a/docs/cpp/m64.md
+++ b/docs/cpp/m64.md
@@ -6,18 +6,18 @@ f1_keywords:
 helpviewer_keywords:
 - __m64 keyword [C++]
 ms.assetid: df0410e8-67c9-4954-88c8-fe2653575252
-ms.openlocfilehash: 2266dac7e655e6c1975b319b1113d577a3105d4e
-ms.sourcegitcommit: c6f8e6c2daec40ff4effd8ca99a7014a3b41ef33
+ms.openlocfilehash: 35de7bcfabd909f098b20a87c663e03d5d2e9845
+ms.sourcegitcommit: a6d63c07ab9ec251c48bc003ab2933cf01263f19
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/24/2019
-ms.locfileid: "64345053"
+ms.lasthandoff: 12/05/2019
+ms.locfileid: "74857450"
 ---
-# <a name="m64"></a>__m64
+# <a name="__m64"></a>__m64
 
-## <a name="microsoft-specific"></a>Sezione specifica Microsoft
+**Sezione specifica Microsoft**
 
-Il **__m64** è di tipo di dati per l'uso con l'intrinseci MMX e 3DNow! oggetti intrinseci e viene definito in \<xmmintrin >.
+Il tipo di dati **__m64** è da usare con MMX e 3DNow! le funzioni intrinseche e sono definite in \<> xmmintrin. h.
 
 ```cpp
 // data_types__m64.cpp
@@ -30,11 +30,11 @@ int main()
 
 ## <a name="remarks"></a>Note
 
-Non è necessario accedere il **__m64** direttamente ai campi. È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m64** esegue il mapping ai registri MM [0-7].
+Non è consigliabile accedere direttamente ai campi **__m64** . È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m64** viene mappata ai registri mm [0-7].
 
-Le variabili di tipo **_m64** vengono automaticamente allineate su limiti di 8 byte.
+Le variabili di tipo **_m64** vengono allineate automaticamente nei limiti di 8 byte.
 
-Il **__m64** tipo di dati non è supportato su x64 processori. Le applicazioni che usano __m64 come parte di intrinseci MMX devono essere riscritte per usare intrinseci SSE e SSE2 equivalenti.
+Il tipo di dati **__m64** non è supportato nei processori x64. Le applicazioni che usano __m64 come parte di intrinseci MMX devono essere riscritte per usare intrinseci SSE e SSE2 equivalenti.
 
 **Fine sezione specifica Microsoft**
 
