--- a/docs/assembler/masm/dot-387.md
+++ b/docs/assembler/masm/dot-387.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - .387 directive
 ms.assetid: 031fa63b-4b69-4043-9bb2-8dabbdbbf1a7
-ms.openlocfilehash: 931f9213fa58de711bd8b40e2614441048749f82
-ms.sourcegitcommit: 9ee5df398bfd30a42739632de3e165874cb675c3
+ms.openlocfilehash: 89a7cad7ea3323e7f565127420cfb35dabdd7c1f
+ms.sourcegitcommit: 0781c69b22797c41630601a176b9ea541be4f2a3
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 11/22/2019
-ms.locfileid: "74398691"
+ms.lasthandoff: 12/20/2019
+ms.locfileid: "75314666"
 ---
 # <a name="387-32-bit-masm"></a>.387 (MASM a 32 bit)
 
@@ -23,4 +23,5 @@ Consente l'assemblaggio di istruzioni per il coprocessore 80387. (solo MASM a 32
 
 ## <a name="see-also"></a>Vedere anche
 
-[Riferimento a direttive](../../assembler/masm/directives-reference.md)
+[Riferimento alle direttive](directives-reference.md)\
+[Grammatica BNF di MASM](masm-bnf-grammar.md)
