--- a/docs/assembler/masm/dot-486.md
+++ b/docs/assembler/masm/dot-486.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - .486 directive
 ms.assetid: f2dfc3fc-f564-4014-874b-9fc68dd348dc
-ms.openlocfilehash: 30fd15879191115e98379953d3c24d3abe26db17
-ms.sourcegitcommit: 9ee5df398bfd30a42739632de3e165874cb675c3
+ms.openlocfilehash: 8e07c5773d9db0a76e8ed2fc094f59d5f39b44b4
+ms.sourcegitcommit: 0781c69b22797c41630601a176b9ea541be4f2a3
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 11/22/2019
-ms.locfileid: "74398709"
+ms.lasthandoff: 12/20/2019
+ms.locfileid: "75314588"
 ---
 # <a name="486-32-bit-masm"></a>.486 (MASM a 32 bit)
 
@@ -23,4 +23,5 @@ Abilita l'assembly di istruzioni senza privilegi per il processore 80486. (solo 
 
 ## <a name="see-also"></a>Vedere anche
 
-[Riferimento a direttive](../../assembler/masm/directives-reference.md)
+[Riferimento alle direttive](directives-reference.md)\
+[Grammatica BNF di MASM](masm-bnf-grammar.md)
