--- a/docs/cpp/m128i.md
+++ b/docs/cpp/m128i.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - __m128i keyword [C++]
 ms.assetid: bd245d68-862c-46dd-9903-6c67c7c5dbcd
-ms.openlocfilehash: 9ca85a84a80a3eb32c00ec4291e71203c8bb4fb8
-ms.sourcegitcommit: a5fa9c6f4f0c239ac23be7de116066a978511de7
+ms.openlocfilehash: 311439785d0afc9aba80ecc470ddc538dd62eb1e
+ms.sourcegitcommit: a930a9b47bd95599265d6ba83bb87e46ae748949
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 12/20/2019
-ms.locfileid: "75301405"
+ms.lasthandoff: 01/22/2020
+ms.locfileid: "76518270"
 ---
 # <a name="__m128i"></a>__m128i
 
@@ -31,7 +31,7 @@ int main() {
 
 Non è consigliabile accedere direttamente ai campi **__m128i** . È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m128i** esegue il mapping ai registri XMM [0-7].
 
-Le variabili di tipo **_m128i** vengono allineate automaticamente nei limiti di 16 byte.
+Le variabili di tipo **__m128i** vengono allineate automaticamente nei limiti di 16 byte.
 
 > [!NOTE]
 >  Se si usano variabili di tipo **__m128i** , il compilatore genererà l'istruzione `movdqa` SSE2. Questa istruzione non causa un errore sui processori Pentium III, ma comporterà un errore invisibile all'utente, con possibili effetti collaterali causati da qualsiasi istruzione `movdqa` convertita in su processori Pentium III.
